--- a/app.json
+++ b/app.json
@@ -24,12 +24,12 @@
          "value": ""
       },
       "API_ID": {
-         "description": "Get API_ID from my.telegram.org, used for telethon based modules.",
+         "description": "Get API_ID from my.telegram.org, used for telethon based plugins.",
          "required": true,
          "value": ""
       },
       "API_HASH": {
-         "description": "Get API_HASH from my.telegram.org, used for telethon based modules.",
+         "description": "Get API_HASH from my.telegram.org, used for telethon based plugins.",
          "required": true,
          "value": ""
       },    
@@ -126,7 +126,7 @@
          "value": ""
       },
       "No_LOAD": {
-         "description": "Dont load these modules cause they shit, space separation",
+         "description": "Dont load these plugins cause they shit, space separation",
          "required": false,
          "value": "cleaner rss connection"
       }, 
