--- a/.github/workflows/nono.yml
+++ b/.github/workflows/nono.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: '😹Welcome to MissHannahRobot'
+          commit_message: 'lets go to plugins'
           commit_options: '--no-verify'
           repository: .
           commit_user_name: Mr-Dark-Prince
