--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Config files, logs and stuff
-SaitamaRobot/modules/helper_funcs/temp.txt
-SaitamaRobot/elevated_users.json
-SaitamaRobot/config.py
-SaitamaRobot/config.ini
+MissHannahRobot/modules/helper_funcs/temp.txt
+MissHannahRobot/elevated_users.json
+MissHannahRobot/config.py
+MissHannahRobot/config.ini
 log.txt
 kangsticker.png
 updates.txt
 
 # Session files
-SaitamaRobot/*.session
-SaitamaRobot/*.session-journal
-saitama.session-journal
+MissHannahRobot/*.session
+MissHannahRobot/*.session-journal
+hannah.session-journal
 *.session
 
 # Byte-compiled / optimized / DLL files
