--- a/.github/workflows/Nooo.yml
+++ b/.github/workflows/Nooo.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "saitama"
-          replace: "hannah"
+          find: "SAITAMA"
+          replace: "HANNAH"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
