--- a/.github/workflows/Nooo.yml
+++ b/.github/workflows/Nooo.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Saitama"
-          replace: "Hannah"
+          find: "SAITAMA_IMG"
+          replace: "HANNAH_IMG"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
