--- a/.github/workflows/Noo.yml
+++ b/.github/workflows/Noo.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "plugins"
-          replace: "modules"
+          find: "sahaya_samagri"
+          replace: "helper_funcs"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
