--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "MissHannahRobot",
+      "name": "MissMissHannahRobot",
       "description": "An Anime themed Telegram group management bot.",
       "keywords": [
          "telegram",
@@ -8,7 +8,7 @@
          "manager",
          "Hannah"
       ],   
-   "repository": "https://github.com/Mr-Dark-Prince/MissHannahRobot",
+   "repository": "https://github.com/Mr-Dark-Prince/MissMissHannahRobot",
    "addons": [
       {
          "options": {
