--- a/.github/workflows/xxx.yml
+++ b/.github/workflows/xxx.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "SLAP_SAITAMA_TEMPLATES"
-          replace: "SLAP_HANNAH_TEMPLATES"
+          find: "saitama"
+          replace: "hannah"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
