--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
          "anime",
          "group",
          "manager",
-         "Saitama"
+         "Hannah"
       ],   
    "repository": "https://github.com/AnimeKaizoku/MissHannahRobot",
    "addons": [
@@ -73,7 +73,7 @@
          "value": "-xyz"
       },
       "DEV_USERS": {
-         "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Saitama support then keep the current ID's here at they are and add yours.",
+         "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Hannah support then keep the current ID's here at they are and add yours.",
          "required": false,
          "value": "660565862 459034222 189005567 346981140 367222759"
       },
