--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "This person CREATED the chat, how would I demote them?"
-          replace: "ഇദ്ദേഹം ആണ് ഈ ഗ്രൂപ്പിന്റെ മൊയലാളി 😁 അയാളെ അഡ്മിൻ സ്ഥാനത്ത് നിന്ന് മാറ്റാൻ എനിക്ക് കഴിയില്ല.. ഓടിക്കോ ഹംകേ..🤭"
+          find: "Can't demote what wasn't promoted!"
+          replace: "ഞാൻ പ്രൊമോട്ട് ചെയ്യാത്ത ഒരാളെ ഡിമോട്ട് ചെയ്യാൻ എനിക്ക് മനസ്സില്ല 😁"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
