--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Can't demote what wasn't promoted!"
-          replace: "ഞാൻ പ്രൊമോട്ട് ചെയ്യാത്ത ഒരാളെ ഡിമോട്ട് ചെയ്യാൻ എനിക്ക് മനസ്സില്ല 😁"
+          find: "I can't demote myself! Get an admin to do it for me."
+          replace: "എനിക്ക് എന്നെത്തന്നെ അഡ്മിൻ സ്ഥാനത്ത് നിന്ന് മാറ്റാൻ കഴിയില്ല!  എനിക്കായി ഇത് ചെയ്യാൻ ഒരു അഡ്മിന്റെ സഹായം തേടുക..."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
