--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "I can't demote myself! Get an admin to do it for me."
-          replace: "എനിക്ക് എന്നെത്തന്നെ അഡ്മിൻ സ്ഥാനത്ത് നിന്ന് മാറ്റാൻ കഴിയില്ല!  എനിക്കായി ഇത് ചെയ്യാൻ ഒരു അഡ്മിന്റെ സഹായം തേടുക..."
+          find: "Could not demote. I might not be admin, or the admin status was appointed by another"
+          replace: "അഡ്മിൻ സ്ഥാനം മാറ്റുവാൻ കഴിയില്ല..ഒന്നുകിൽ ഞാൻ അഡ്മിൻ അല്ല..അല്ലെങ്കിൽ അദ്ദേഹത്തെ അഡ്മിൻ ആക്കിയത് മറ്റാരോ ആണ്.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
