--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "user, so I can't act upon them"
-          replace: "ആയതിനാൽ എനിക്ക് ഒന്നും ചെയ്യാൻ കഴിയില്ല.."
+          find: "Admins cache refreshed!"
+          replace: "അഡ്മിൻ ലിസ്റ്റ് അപ്ഡേറ്റ് ചെയ്തു☑️"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
