--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Admins cache refreshed!"
-          replace: "അഡ്മിൻ ലിസ്റ്റ് അപ്ഡേറ്റ് ചെയ്തു☑️"
+          find: "This person CREATED the chat, how can i set custom title for him?"
+          replace: "ഗ്രൂപ്പ്‌ മുതലാളിയുടെ അഡ്മിൻ നാമം മാറ്റാൻ എനിക്ക് കഴിയില്ല"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
