--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "I can't set my own title myself! Get the one who made me admin to do it for me"
-          replace: "എനിക്ക് എന്റെ അഡ്മിൻ നാമം മാറ്റാൻ കഴിയില്ല.."
+          find: "ബാൻ ചെയ്യാൻ പറഞ്ഞ ആളെ എന്നിക്ക് ഒരു സംശയം😜."
+          replace: "ബാൻ ചെയ്യാൻ പറഞ്ഞ ആളെ എനിക്ക് ഒരു സംശയം😜. ആരെയാണ് ബാൻ ചെയ്യേണ്ടത് മിസ്റ്റർ 🙄"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
