--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "ബാൻ ചെയ്യാൻ പറഞ്ഞ ആളെ എന്നിക്ക് ഒരു സംശയം😜."
-          replace: "ബാൻ ചെയ്യാൻ പറഞ്ഞ ആളെ എനിക്ക് ഒരു സംശയം😜. ആരെയാണ് ബാൻ ചെയ്യേണ്ടത് മിസ്റ്റർ 🙄"
+          find: "ഞാൻ പ്രൊമോട്ട് ചെയ്തു അഡ്മിൻ അഡ്മിൻ ആയവരുടെ പേര് മാത്രമേ മാറ്റം വരുത്തുകയുള്ളു.."
+          replace: "ഞാൻ പ്രൊമോട്ട് ചെയ്തു അഡ്മിൻ ആക്കിയവരുടെ പേര് മാത്രമേ മാറ്റം വരുത്തുകയുള്ളു.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
