--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "I don't seem to have interacted with this user before - please forward a message from them to give me control! (like a voodoo doll, I need a piece of them to be able to execute certain commands...)"
-          replace: "എനിക്ക് ഇദ്ദേഹത്തെ അറിയില്ല - എനിക്ക് നിയന്ത്രണം നൽപ്പിലാക്കാൻ അയാൾ അയച്ച മെസ്സേജ് എനിക്ക് ഫോർവേഡ് ചെയ്യുക..(ചില കമാൻഡുകൾ നടപ്പിലാക്കാൻ എനിക്ക് അവയുടെ ഒരു ഭാഗം ആവശ്യമാണ്.. ഞാൻ കണ്ടിട്ടില്ലാത്ത ആളിനെ എനിക്ക് ഒന്നും ചെയ്യാൻ കഴിയില്ല ⚠️)"
+          find: "I don't seem to have interacted with this user before - please forward a message from "
+          replace: "എനിക്ക് അദ്ദേഹത്തിന്റെ അക്കൗണ്ട് മനസ്സിലാക്കാൻ കഴിയുന്നില്ല.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
