--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: ""
-          replace: ""
+          find: "നിങ്ങൾ ഒരു ഉപയോക്താവിനെ പരാമർശിക്കുന്നതായി തോന്നുന്നില്ല..😳അല്ലെങ്കിൽ വ്യക്തമാക്കിയ യൂസർ ഐഡി തെറ്റാണ്.."
+          replace: "⚠️പ്രൊമോട്ട് ചെയ്യേണ്ട ആളുടെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക. അല്ലെങ്കിൽ `/promote <username/id>` നൽകുക.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
