--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "⚠️പ്രൊമോട്ട് ചെയ്യേണ്ട ആളുടെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക. അല്ലെങ്കിൽ `/promote <username/id>` നൽകുക.."
-          replace: "⚠️പ്രൊമോട്ട് ചെയ്യേണ്ട ആളുടെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക. അല്ലെങ്കിൽ ```/promote <username/id>``` നൽകുക.."
+          find: "🥥തേങ്ങാക്കൊല! ഒന്നുകിൽ ബാൻ ചെയ്യേണ്ട ആളിന്റെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ `/ban <username> അല്ലേൽ <id> നൽകുക`"
+          replace: "🥥തേങ്ങാക്കൊല! ഒന്നുകിൽ ബാൻ ചെയ്യേണ്ട ആളിന്റെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ ```/ban <username> അല്ലേൽ <id> നൽകുക```"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
