--- a/.github/workflows/zzz😴.yml
+++ b/.github/workflows/zzz😴.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "I am now online!"
-          replace: "😁 ഞാൻ ഇപ്പോഴും ജീവിച്ചിരിക്കുന്നു.."
+          find: "🥥തേങ്ങാക്കൊല! ഒന്നുകിൽ ബാൻ ചെയ്യേണ്ട ആളിന്റെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ /ban <username> അല്ലേൽ <id> നൽകുക.."
+          replace: "⚠️തെറ്റ്.. ബാൻ ചെയ്യേണ്ട മെമ്പറുടെ സന്ദേശത്തിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ /ban <username> അല്ലേൽ <id> നൽകുക.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
