Update and rename zzz😴.yml to mrdarkprince.yml

--- a/.github/workflows/mrdarkprince.yml
+++ b/.github/workflows/mrdarkprince.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "🥥തേങ്ങാക്കൊല! ഒന്നുകിൽ ബാൻ ചെയ്യേണ്ട ആളിന്റെ മെസ്സേജിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ /ban <username> അല്ലേൽ <id> നൽകുക.."
-          replace: "⚠️തെറ്റ്.. ബാൻ ചെയ്യേണ്ട മെമ്പറുടെ സന്ദേശത്തിന് മറുപടിയായി കമാൻഡ് നൽകുക.. അല്ലെങ്കിൽ /ban <username> അല്ലേൽ <id> നൽകുക.."
+          find: "This is a group only command!"
+          replace: "ഈ കമാൻഡ് ഗ്രൂപ്പിൽ മാത്രമേ വർക്ക്‌ ചെയ്യുകയുള്ളൂ.."
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
