--- a/.github/workflows/mrdarkprince.yml
+++ b/.github/workflows/mrdarkprince.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "This is a group only command!"
-          replace: "ഈ കമാൻഡ് ഗ്രൂപ്പിൽ മാത്രമേ വർക്ക്‌ ചെയ്യുകയുള്ളൂ.."
+          find: "Try downloading and uploading the file yourself again, This one seem broken to me!"
+          replace: "ഫയൽ വീണ്ടും ഡൌൺലോഡ് ചെയ്ത് അപ്‌ലോഡ് ചെയ്യാൻ ശ്രമിക്കുക, ഇത് എനിക്ക് തകർന്നതായി തോന്നുന്നു!"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
