--- a/.github/workflows/mrdarkprince.yml
+++ b/.github/workflows/mrdarkprince.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: "Try downloading and uploading the file yourself again, This one seem broken to me!"
-          replace: "ഫയൽ വീണ്ടും ഡൌൺലോഡ് ചെയ്ത് അപ്‌ലോഡ് ചെയ്യാൻ ശ്രമിക്കുക, ഇത് എനിക്ക് തകർന്നതായി തോന്നുന്നു!"
+          find: "There are more than one group in this file and the chat.id is not same! How am i supposed to import it?"
+          replace: "ഈ ഫയലിൽ ഒന്നിൽ കൂടുതൽ ഗ്രൂപ്പുകളുണ്ട്, ചാറ്റ് ഐഡി സമാനമല്ല!  ഞാൻ എങ്ങനെ import ചെയ്യും?"
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
